Fix main theme attribute toggle to change to "long" on resize above isSmallScreen()

--- a/index.html
+++ b/index.html
@@ -697,6 +697,7 @@
       elements["close-btn"].style.display = "";
     } else {
       elements["primary-nav"].classList.remove("slider");
+      elements["email-list"].setAttribute("data-theme", "long");
       currentDate.realtimeClock();
       elements["scrim"].style.display = "none";
       elements["menu-btn"].style.display = "none";
