Removed pinned email from HTML list

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               </div>
             </div>
           </li>
-          <li class="email" id="email3" role="listitem">
+          <!-- <li class="email" id="email3" role="listitem">
             <div class="card">
               <div class="email__actions">
                 <span class="email__initials" aria-hidden="true"> 
@@ -217,7 +217,7 @@
                 </div>
               </div>
             </div>
-          </li>
+          </li> -->
           <li class="email" id="email4">
             <div class="card">
               <div class="email__actions" aria-describedby="author3">
