Added dummy JSON text

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <li class="nav__link">
           <a href="#">
             <span class="inbox-icon">Inbox Icon</span>
-            Inbox <span id="unread-count">unread</span>
+            Inbox <span id="unread-count" class="badge">unread</span>
           </a>
         </li>
         <li class="nav__link">
